--- a/html/commit_count_template.html
+++ b/html/commit_count_template.html
@@ -4,19 +4,17 @@
     body {
         font: 10px sans-serif;
     }
-
     .axis path,
     .axis line {
         fill: none;
         stroke: #000;
         shape-rendering: crispEdges;
     }
-
     .bar {
         fill: steelblue;
     }
-
-    .x.axis path {
+    rect:hover {
+        fill: rgb(62, 104, 146);
     }
 </style>
 <body>
