--- a/html/cooccurrences-graph-template.html
+++ b/html/cooccurrences-graph-template.html
@@ -170,7 +170,7 @@ var node = svg.selectAll(".node")
         .data(graph.nodes)
         .enter().append("circle")
         .attr("class", "node")
-        .attr("r", 5)
+        .attr("r", function(d){ return d.selected ? 7 : 5; })
         .style("fill", function (d) { return color(d.group); })
         .call(force.drag)
         .on("mouseover", function(d) {
@@ -184,10 +184,13 @@ var node = svg.selectAll(".node")
             div.style("opacity", .0);
         })
         .on("click", function (d) {
-            console.log(
-                    graph.nodes.filter(function(node) { return quickFind.areConnected(node.index, d.index); })
-                    .map(function (d) { return d.name; })
-            );
+            var connectedNodes = graph.nodes.filter(function(eachNode) { return quickFind.areConnected(eachNode.index, d.index); });
+            graph.nodes.forEach(function (eachNode) { eachNode.selected = false; });
+            connectedNodes.forEach(function (eachNode) { eachNode.selected = true; });
+
+            node.data(graph.nodes).attr("r", function(d){ return d.selected ? 7 : 5; });
+
+            console.log(connectedNodes.map(function (d) { return d.name; }));
         });
 
 node.append("title").text(function (d) { return d.name; });
