changed header for commit calendar

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ ConfigImportSettings,4fd6cc48b6cd9ce020756ed75704dde17ebfc63c,Kirill Safonov,201
         </p>
 
         <h3>Examples</h3>
-        <h6>    Commits calendar view</h6>
+        <h6>Commits calendar view (GitHub-style)</h6>
         <p id="commit-calendar"></p>
 
         <h3>How to use?</h3>
