working template for commits graph

--- a/html/cooccurrences-graph-template.html
+++ b/html/cooccurrences-graph-template.html
@@ -55,6 +55,7 @@ QuickFind.prototype.areConnected = function(p1, p2) {
 };
 
 const graph = {
+/*data_placeholder*/
     "nodes": [
         {"name": "MyArtifactRepository.java", "group": 1},
         {"name": "AbstractGradleUserProjectChange.java", "group": 1},
@@ -140,6 +141,7 @@ const graph = {
         {"source": 41, "target": 3, "value": 3},
         {"source": 13, "target": 44, "value": 3}
     ]
+/*data_placeholder*/
 };
 const quickFind = new QuickFind(graph.nodes.length);
 graph.links.forEach(function (link) {
